Create Invoice endpoint